# quadtree-renderer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  build.sh
include/: Application.h  BucketMeshRenderer.h  Camera.h  GeoTIFFLoader.h  Quadtree.h  QuadtreeRenderer.h  QuadtreeTile.h  QuadtreeWorld.h  Shader.h
include/qtplanet/: CartesianCoordinates.h  CoordinateSystems.h  GeoTIFFLoader.h  MultiGeoTIFFManager.h  Perlin.h  PolarCoordinates.h  Quadtree.h  QuadtreeTile.h  QuadtreeWorld.h  SphericalCoordinates.h  TileMetadata.h
resources/: apollo.TIFF
shaders/: fragment_shader.glsl  terrain_fragment_shader.glsl  terrain_vertex_shader.glsl  vertex_shader.glsl
src/: Application.cpp  GeoTIFFLoader.cpp  QuadtreeRenderer.cpp  QuadtreeTile.cpp  QuadtreeWorld.cpp  Shader.cpp  main.cpp
src/qtplanet/: CMakeLists.txt  CartesianCoordinates.cpp  GeoTIFFLoader.cpp  PolarCoordinates.cpp  QuadtreeTile.cpp  QuadtreeWorld.cpp  SphericalCoordinates.cpp
